compiler/testData/ir/interpreter/progressionFromClosedRange.kt
const konst a = <!EVALUATED: `0`!>IntProgression.fromClosedRange(0, 10, 1).first<!>
const konst b = <!EVALUATED: `10`!>LongProgression.fromClosedRange(0L, 10L, 1L).last<!>
const konst c = <!EVALUATED: `1`!>CharProgression.fromClosedRange('0', '9', 1).step<!>
